Fix alignment for long staff lists

--- a/app/app/game/[gameId]/gamepage.module.css
+++ b/app/app/game/[gameId]/gamepage.module.css
@@ -51,6 +51,7 @@
   padding: 0.5rem;
   gap: 0 1rem;
   grid-template-columns: min-content 1fr max-content max-content max-content;
+  grid-template-rows: min-content 1.5rem;
 }
 
 .rating {
